Colaboratory를 통해 생성됨

--- a/공수과제.ipynb
+++ b/공수과제.ipynb
@@ -70,7 +70,7 @@
         "R(r)\\Phi(\\phi) = \\sum_{n=0}^\\infty &[C_n r^n + \\frac{D_n}{r^{n+1}}]P_n^m(cos\\phi) \\\\\n",
         "u(r,\\theta,\\phi) = \\sum_{n=0}^{\\infty}\\sum_{m=-n}^{n}&(A_nr^n+\\frac{B_n}{r^{n+1}})P_n^m(cos\\phi)e^{im\\theta} \\\\\n",
         "u(R,\\phi,\\theta)=g(\\phi,\\theta) = \\sum_{n=0}^{\\infty} & \\sum_{m=-n}^{n} (A_nR^n+\\frac{B_n}{R^{n+1}})P_n^m(cos\\phi)e^{im\\theta} \\\\\n",
-        "\\end{align*}"
+        "\\end{align*}$"
       ]
     },
     {
@@ -137,7 +137,7 @@
         "(a) \\;\\;\n",
         " u_{rr} +\\frac{2}{r} u_r &+\\frac{1}{r^2}u_{\\phi\\phi} +\\frac{\\cot\\phi}{r^2} u_{\\phi} +\\frac{1}{r^2\\sin^2\\phi}u_{\\theta\\theta} = -F(r,\\phi,\\theta), \\;\\; r < R \\\\ \n",
         " u(R,\\phi,\\theta) &= 0\\\\ \n",
-        "\\end{align*}"
+        "\\end{align*}$"
       ]
     },
     {
