Colaboratory를 통해 생성됨

--- a/공수과제.ipynb
+++ b/공수과제.ipynb
@@ -42,35 +42,60 @@
         "colab_type": "text"
       },
       "source": [
+        "> $\\displaystyle (a) \\;\\;\\;\\; u_{rr} + \\frac{2}{r} u_r + \\frac{1}{r^2}u_{\\phi\\phi} +\\frac{\\cot\\phi}{r^2} u_{\\phi} + \\frac{1}{r^2\\sin^2\\phi}u_{\\theta\\theta} = 0, \\;\\; r < R \\\\ $\n",
+        " \n",
+        "> $\\displaystyle u(R,\\phi,\\theta) = g(\\phi,\\theta) \\\\ $ \n",
+        "\n",
+        "> $\\displaystyle \\downarrow \\\\ $\n",
+        "\n",
+        ">$\\displaystyle separation \\;\\;of \\;\\; variables : \\;\\; u(R,\\phi,\\theta) = R(r)\\Phi(\\phi)\\Theta(\\theta) \\\\ $\n",
+        "\n",
+        ">$\\displaystyle \\;\\; $\n",
+        "\n",
         ">$\\displaystyle\n",
-        "$\\begin{align*}\n",
-        "(a) \\;\\;\\;\\; u_{rr} +\\frac{2}{r} u_r +\\frac{1}{r^2}u_{\\phi\\phi} +\\frac{\\cot\\phi}{r^2} u_{\\phi} &+\\frac{1}{r^2\\sin^2\\phi}u_{\\theta\\theta} = 0, \\;\\; r < R \\\\ \n",
-        " u(R,\\phi,\\theta) &= g(\\phi,\\theta) \\\\ \n",
-        "&\\downarrow \\\\\n",
-        "separation \\;\\;of \\;\\; variables : \\;\\; &u(R,\\phi,\\theta) = R(r)\\Phi(\\phi)\\Theta(\\theta) \\\\\n",
-        "&\\Downarrow \\\\ \n",
-        "R''\\Theta+\\frac{2}{r}R'\\Theta+\\frac{1}{r^2sin^2\\phi}\\Theta''\\Phi{R} &+ \\frac{cos\\phi}{r^2sin^2\\phi}\\Phi'\\Theta{R} + \\frac{1}{r^2}\\Phi''\\Theta{R}=0 \\\\\n",
-        "(\\frac{r^2sin^2\\phi{R}''}{R} + \\frac{2rsin^2\\phi{R'}}{R}) + (\\frac{\\Theta''}{\\Theta}) &+ (\\frac{cos\\phi sin\\phi\\Phi''}{\\Phi}\\Phi'\\Theta+\\frac{sin^2\\phi}{\\Phi}\\Phi''\\Theta)=0 \\\\\n",
-        "&\\Downarrow \\\\ \n",
-        "\\frac{\\Theta''}{\\Theta} &= -m^2 \\\\\n",
-        "\\Theta(\\theta) &= A_me^{im\\theta} \\\\\n",
-        "&\\Downarrow \\\\\n",
-        "\\Theta(\\theta) = A_m sin & (m\\theta)+B_m cos (m\\theta) \\\\\n",
-        "\\frac{r^2{R}''}{R} + \\frac{2r{R'}}{R} + \\frac{1}{sin^2\\phi}(\\frac{cos\\phi  sin\\phi \\Phi''} {\\Phi} \\Phi' \\Theta &+ \\frac{sin^2\\phi} {\\Phi} \\Phi''\\Theta-m^2) = 0 \\\\\n",
-        "-\\frac{r^2{R}''}{R} + \\frac{2r{R'}}{R} = \\frac{1}{sin^2\\phi} (\\frac{cos\\phi sin\\phi\\Phi''}{\\Phi} \\Phi'\\Theta &+ \\frac{sin^2\\phi}{\\Phi}\\Phi''\\Theta-m^2) = -\\lambda, \\;\\;\\;\\lambda = n(n+1) \\\\\n",
-        "&\\Downarrow \\\\\n",
-        "R_n(r)=C_nr^n &+ D_nr^{-n-1} \\\\\n",
-        "n(n+1)-\\frac{m^2}{sin^2\\phi} +& \\frac{cos\\phi}{sin\\phi}\\frac{1}{\\Phi}\\Phi'+\\frac{\\Phi''}{\\Phi}=0 \\\\\n",
-        "&\\Downarrow \\\\\n",
-        " (\\Phi''+\\frac{cos\\phi}{sin\\phi}\\Phi'+&[n(n+1)-\\frac{m^2}{sin^2\\phi}]\\phi=0 \\\\\n",
-        "&\\Downarrow  x=cos\\phi, m=-n,...,-1,0,1,...,n \\\\\n",
-        "P_n(x) = \\frac{1}{2^n} & \\frac{d^n}{dx^n}(x^2-1)^n \\:\\; : not \\:\\: general \\\\\n",
-        "P_n^m(x) = \\frac{(-1)^m}{2^n n!}(1-x^2)^{\\frac{m} {2}} & \\frac{d^{n+m}}{dx^{n+m}} (x^2+1)^n \\;\\;\\;\\; (-n \\leq m \\leq +n) \\;\\;\\; : general \\\\\n",
-        "&\\Downarrow \\\\\n",
-        "R(r)\\Phi(\\phi) = \\sum_{n=0}^\\infty &[C_n r^n + \\frac{D_n}{r^{n+1}}]P_n^m(cos\\phi) \\\\\n",
-        "u(r,\\theta,\\phi) = \\sum_{n=0}^{\\infty}\\sum_{m=-n}^{n}&(A_nr^n+\\frac{B_n}{r^{n+1}})P_n^m(cos\\phi)e^{im\\theta} \\\\\n",
-        "u(R,\\phi,\\theta)=g(\\phi,\\theta) = \\sum_{n=0}^{\\infty} & \\sum_{m=-n}^{n} (A_nR^n+\\frac{B_n}{R^{n+1}})P_n^m(cos\\phi)e^{im\\theta} \\\\\n",
-        "\\end{align*}$"
+        "R''\\Theta+\\frac{2}{r}R'\\Theta+\\frac{1}{r^2sin^2\\phi}\\Theta''\\Phi{R} + \\frac{cos\\phi}{r^2sin^2\\phi}\\Phi'\\Theta{R} + \\frac{1}{r^2}\\Phi''\\Theta{R}=0 \\\\ $ \n",
+        "\n",
+        ">$\\displaystyle (\\frac{r^2sin^2\\phi{R}''}{R} + \\frac{2rsin^2\\phi{R'}}{R}) + (\\frac{\\Theta''}{\\Theta}) + (\\frac{cos\\phi sin\\phi\\Phi''}{\\Phi}\\Phi'\\Theta+\\frac{sin^2\\phi}{\\Phi}\\Phi''\\Theta)=0 \\\\ $\n",
+        "\n",
+        ">$\\displaystyle \\Downarrow \\\\ $\n",
+        "\n",
+        ">$\\displaystyle \\frac{\\Theta''}{\\Theta} = -m^2 \\\\ $\n",
+        "\n",
+        ">$\\displaystyle \\Theta(\\theta) = A_me^{im\\theta} \\\\ $\n",
+        "\n",
+        ">$\\displaystyle \\Theta(\\theta) = A_m sin  (m\\theta)+B_m cos (m\\theta) \\\\ $\n",
+        "\n",
+        ">$\\displaystyle \\Downarrow \\\\ $\n",
+        "\n",
+        ">$\\displaystyle \\frac{r^2{R}''}{R} + \\frac{2r{R'}}{R} + \\frac{1}{sin^2\\phi}(\\frac{cos\\phi  sin\\phi \\Phi''} {\\Phi} \\Phi' \\Theta + \\frac{sin^2\\phi} {\\Phi} \\Phi''\\Theta-m^2) = 0 \\\\ $\n",
+        "\n",
+        ">$\\displaystyle -\\frac{r^2{R}''}{R} + \\frac{2r{R'}}{R} = \\frac{1}{sin^2\\phi} (\\frac{cos\\phi sin\\phi\\Phi''}{\\Phi} \\Phi'\\Theta + \\frac{sin^2\\phi}{\\Phi}\\Phi''\\Theta-m^2) = -\\lambda $\n",
+        "\n",
+        ">$\\displaystyle \\lambda_n = n(n+1) \\\\ $\n",
+        "\n",
+        ">$\\displaystyle R_n(r)=C_nr^n + D_nr^{-n-1} \\\\ $\n",
+        "\n",
+        ">$\\displaystyle \\Downarrow \\\\ $\n",
+        "\n",
+        ">$\\displaystyle n(n+1)-\\frac{m^2}{sin^2\\phi} + \\frac{cos\\phi}{sin\\phi}\\frac{1}{\\Phi}\\Phi'+\\frac{\\Phi''}{\\Phi}=0 \\\\ $\n",
+        "\n",
+        ">$ \\displaystyle \\Downarrow \\\\ $\n",
+        "\n",
+        ">$\\displaystyle (\\Phi''+\\frac{cos\\phi}{sin\\phi}\\Phi'+[n(n+1)-\\frac{m^2}{sin^2\\phi}]\\phi=0 \\\\ $\n",
+        ">$\\displaystyle \\Downarrow  x=cos\\phi, m=-n,...,-1,0,1,...,n \\\\ $\n",
+        "\n",
+        ">$\\displaystyle P_n(x) = \\frac{1}{2^n}  \\frac{d^n}{dx^n}(x^2-1)^n \\:\\; : not \\:\\: general \\\\ $\n",
+        "\n",
+        ">$\\displaystyle  P_n^m(x) = \\frac{(-1)^m}{2^n n!}(1-x^2)^{\\frac{m} {2}}  \\frac{d^{n+m}}{dx^{n+m}} (x^2+1)^n \\;\\;\\;\\; (-n \\leq m \\leq +n) \\;\\;\\; : general \\\\ $\n",
+        "\n",
+        "\n",
+        ">$\\displaystyle R(r)\\Phi(\\phi) = \\sum_{n=0}^\\infty [C_n r^n + \\frac{D_n}{r^{n+1}}]P_n^m(cos\\phi) \\\\ $\n",
+        "\n",
+        ">$\\displaystyle  \\Downarrow $\n",
+        "\n",
+        ">$\\displaystyle  u(r,\\theta,\\phi) = \\sum_{n=0}^{\\infty}\\sum_{m=-n}^{n} (A_nr^n+\\frac{B_n}{r^{n+1}})P_n^m(cos\\phi)e^{im\\theta} \\\\ $\n",
+        "\n",
+        ">$\\displaystyle  u(R,\\phi,\\theta)=g(\\phi,\\theta) = \\sum_{n=0}^{\\infty}  \\sum_{m=-n}^{n} (A_nR^n+\\frac{B_n}{R^{n+1}})P_n^m(cos\\phi)e^{im\\theta} \\\\ $"
       ]
     },
     {
@@ -132,12 +157,10 @@
         "colab_type": "text"
       },
       "source": [
-        ">$\\displaystyle\n",
-        "$\\begin{align*}\n",
+        "$\\displaystyle\n",
         "(a) \\;\\;\n",
-        " u_{rr} +\\frac{2}{r} u_r &+\\frac{1}{r^2}u_{\\phi\\phi} +\\frac{\\cot\\phi}{r^2} u_{\\phi} +\\frac{1}{r^2\\sin^2\\phi}u_{\\theta\\theta} = -F(r,\\phi,\\theta), \\;\\; r < R \\\\ \n",
-        " u(R,\\phi,\\theta) &= 0\\\\ \n",
-        "\\end{align*}$"
+        " u_{rr} +\\frac{2}{r} u_r +\\frac{1}{r^2}u_{\\phi\\phi} +\\frac{\\cot\\phi}{r^2} u_{\\phi} +\\frac{1}{r^2\\sin^2\\phi}u_{\\theta\\theta} = -F(r,\\phi,\\theta), \\;\\; r < R \\\\ $\n",
+        " >$\\displaystyle u(R,\\phi,\\theta) = 0\\\\ $"
       ]
     },
     {
